Fix suspicious condition (assignment + comparison)

BUG: 366763
Reviewed by Christoph Feck